fix: experience visibility

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,10 @@ body {
   scroll-behavior: smooth;
 }
 
+html {
+  --line-color: #fff; // vertical timeline line color
+}
+
 * {
   margin: 0;
   padding: 0;
